feat: enhance Nexus workspace
